# loguru-otel-lab

./: .dockerignore  .gitignore  Dockerfile  README.md  config.alloy  docker-compose.yml  pyproject.toml
loguru_otel_lab/: __init__.py  log_helpers.py  main.py
